[project]
name = "automatic-prompt-generation-via-contrastive-self-feedback"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types>=0.7.0",
    "anyio>=4.13.0",
    "asttokens>=3.0.1",
    "certifi>=2026.2.25",
    "comm>=0.2.3",
    "contourpy>=1.3.3",
    "cycler>=0.12.1",
    "debugpy>=1.8.20",
    "decorator>=5.2.1",
    "et-xmlfile>=2.0.0",
    "executing>=2.2.1",
    "fonttools>=4.62.1",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "idna>=3.11",
    "ipykernel>=7.2.0",
    "ipython>=9.12.0",
    "ipython-pygments-lexers>=1.1.1",
    "jedi>=0.19.2",
    "joblib>=1.5.3",
    "jupyter-client>=8.8.0",
    "jupyter-core>=5.9.1",
    "kiwisolver>=1.5.0",
    "matplotlib>=3.10.8",
    "matplotlib-inline>=0.2.1",
    "nest-asyncio>=1.6.0",
    "numpy>=2.4.4",
    "ollama>=0.6.1",
    "openpyxl>=3.1.5",
    "packaging>=26.0",
    "pandas>=3.0.2",
    "parso>=0.8.6",
    "pexpect>=4.9.0",
    "pillow>=12.2.0",
    "platformdirs>=4.9.6",
    "prompt-toolkit>=3.0.52",
    "psutil>=7.2.2",
    "ptyprocess>=0.7.0",
    "pure-eval>=0.2.3",
    "pydantic>=2.13.0",
    "pydantic-core>=2.46.0",
    "pygments>=2.20.0",
    "pyparsing>=3.3.2",
    "python-dateutil>=2.9.0.post0",
    "pyzmq>=27.1.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "setuptools>=82.0.1",
    "six>=1.17.0",
    "stack-data>=0.6.3",
    "threadpoolctl>=3.6.0",
    "tornado>=6.5.5",
    "tqdm>=4.67.3",
    "traitlets>=5.14.3",
    "typing-extensions>=4.15.0",
    "typing-inspection>=0.4.2",
    "wcwidth>=0.6.0",
    "wheel>=0.46.3",
]
